--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ aiogram-dialog==2.1.0
 aiohttp==3.9.5
 aiosignal==1.3.1
 aiosqlite==0.20.0
-openai==1.17.0
+openai==1.21.2
 alembic==1.13.1
 annotated-types==0.6.0
 anyio==4.3.0
@@ -48,3 +48,5 @@ tzlocal==5.2
 urllib3==2.2.1
 uvloop==0.19.0
 yarl==1.9.4
+
+prodamuspy==1.0.2
