--- a/compose.yaml
+++ b/compose.yaml
@@ -1,11 +1,20 @@
 services:
-  web:
+  bot:
     build: .
     depends_on:
       - db
       - redis
     env_file:
-      - path: ./.env
+      - .env
+
+  app:
+    build:
+      context: .
+      dockerfile: ./app/Dockerfile
+    env_file:
+      - .env
+    ports:
+      - 8000:8000
 
   redis:
     image: "redis:alpine"
