--- a/compose.yaml
+++ b/compose.yaml
@@ -1,20 +1,11 @@
 services:
-  bot:
+  web:
     build: .
     depends_on:
       - db
       - redis
     env_file:
-      - .env
-
-  app:
-    build:
-      context: .
-      dockerfile: ./app/Dockerfile
-    env_file:
-      - .env
-    ports:
-      - 8000:8000
+      - path: ./.env
 
   redis:
     image: "redis:alpine"
