Added some changes in compose.yaml

--- a/compose.yaml
+++ b/compose.yaml
@@ -27,4 +27,4 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=foo
+      - POSTGRES_DB=tales_db
