--- a/compose.yaml
+++ b/compose.yaml
@@ -10,6 +10,43 @@ services:
       - .:/app
     restart: on-failure:10
 
+  worker:
+    build:
+      context: .
+      dockerfile: worker_Dockerfile
+    depends_on:
+      - db
+      - redis
+    env_file:
+      - .env
+    volumes:
+      - .:/app
+    restart: on-failure:10
+
+
+  app:
+    build:
+      context: .
+      dockerfile: ./app/Dockerfile
+    env_file:
+      - .env
+    ports:
+      - 8000:8000
+
+  redis:
+    image: "redis:alpine"
+
+  db:
+    image: "postgres:15.3"
+    expose:
+      - 5432
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=tales_db
+
+    restart: on-failure:10
+
   app:
     build:
       context: .
